# darth-infra-cli

./: .gitignore  CHANGELOG.md  README.md  darth-ecs.schema.json  darth-infra.schema.json  package.json  pyproject.toml
.changeset/: breezy-symbols-help.md  calm-singers-move.md  flat-foxes-clap.md  fruity-numbers-hope.md  heavy-horses-glow.md  lemon-maps-itch.md  moody-sites-laugh.md  stale-groups-cross.md  two-icons-wear.md  wide-trees-think.md
.github/scripts/: publish.sh  version.sh
.github/workflows/: release.yml
src/darth_ecs/config/: loader.py  models.py
src/darth_ecs/scaffold/: generator.py
src/darth_ecs/templates/stacks/: main_stack.py.j2
src/darth_ecs/tui/: app.py
src/darth_ecs/tui/screens/: __init__.py  alb.py  rds.py  review.py  s3.py  secrets.py  services.py  welcome.py
src/darth_infra/: darth-infra.schema.json
src/darth_infra/cli/: build_cmd.py  cfn.py  deploy_cmd.py  destroy_cmd.py  helpers.py  image_ops.py  init_cmd.py  main.py  push_cmd.py  render_cmd.py  secret_cmd.py
src/darth_infra/config/: loader.py  models.py
src/darth_infra/scaffold/: generator.py
src/darth_infra/templates/: app.py.j2
src/darth_infra/templates/cfn/: README.md.j2  root.yaml.j2
src/darth_infra/tui/: app.py  step_rail.py  steps.py  wizard_export.py
src/darth_infra/tui/screens/: __init__.py  s3.py  (+8 more)
tests/: test_cli_cfn_cloudfront_listener_validation.py  test_cli_cfn_environment_tags.py  test_config_environment_tags.py  test_config_validation_cloudfront_alb.py  test_deploy_secret_validation.py  test_generator_cloudfront_alb.py  test_tui_review_build_config.py
(+6 files in other folders)
