[project]
name = "darth-infra"
version = "0.2.0"
description = "A CLI tool for deploying websites to AWS ECS with multi-environment support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "textual>=1.0",
    "jinja2>=3.1",
    "boto3>=1.35",
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
darth-infra = "darth_infra.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/darth_infra"]

[tool.hatch.build.targets.wheel.force-include]
"src/darth_infra/darth-infra.schema.json" = "darth_infra/darth-infra.schema.json"
